libtorrent_torrent_files = files(
  'data/block.cc',
  'data/block_list.cc',
  'data/chunk_utils.cc',
  'data/download_data.cc',
  'data/file.cc',
  'data/file_list.cc',
  'data/file_list_iterator.cc',
  'data/file_manager.cc',
  'data/file_utils.cc',
  'data/transfer_list.cc',
  'download/choke_group.cc',
  'download/choke_queue.cc',
  'download/download_manager.cc',
  'download/resource_manager.cc',
  'net/address_info.cc',
  'net/fd.cc',
  'net/resolver.cc',
  'net/socket_address.cc',
  'net/socket_address_key.cc',
  'net/socket_event.cc',
  'net/utils.cc',
  'peer/client_info.cc',
  'peer/client_list.cc',
  'peer/connection_list.cc',
  'peer/peer.cc',
  'peer/peer_info.cc',
  'peer/peer_list.cc',
  'tracker/dht_controller.cc',
  'tracker/manager.cc',
  'tracker/tracker.cc',
  'tracker/wrappers.cc',
  'utils/directory_events.cc',
  'utils/log.cc',
  'utils/log_buffer.cc',
  'utils/option_strings.cc',
  'utils/random.cc',
  'utils/resume.cc',
  'utils/scheduler.cc',
  'utils/signal_bitfield.cc',
  'utils/thread.cc',
  'utils/thread_interrupt.cc',
  'utils/uri_parser.cc',
  'bitfield.cc',
  'chunk_manager.cc',
  'connection_manager.cc',
  'download.cc',
  'error.cc',
  'event.cc',
  'exceptions.cc',
  'hash_string.cc',
  'http.cc',
  'object.cc',
  'object_static_map.cc',
  'object_stream.cc',
  'path.cc',
  'poll_epoll.cc',
  'poll_kqueue.cc',
  'poll_select.cc',
  'rate.cc',
  'throttle.cc',
  'torrent.cc',
  'tracker_controller.cc',
  'tracker_list.cc',
)

libtorrent_torrent = static_library(
  'libtorrent-torrent',
  libtorrent_torrent_files,
  dependencies: kqueue_dep,
  include_directories: ['../..', '..'],
)
